--- a/index.css
+++ b/index.css
@@ -1,46 +1,52 @@
 form input[type=text]{
   width: 30px;
   padding: 5px 8px;
-  border: solid #ffecdb;
-  background-color:whitesmoke;
-  color:#3a539b;
   font-size: 16px;
 }
 
-input#tax-rate.rate{
-  width: 20px;
+input#tax-rate.rate {
+  width: 10px;
 }
 
 label {
   font-size: 16px;
+  text-align: end;
+  padding: 5px 8px;
 }
 
-.all{
+.main{
   display:flex;
   flex-direction: row;
-  justify-content: space-evenly;  
+  justify-content: space-evenly;
+  flex-wrap: wrap; 
 }
 
 .row {
   display:flex;
   flex: 1;
   flex-direction: column;
-  justify-content: space-between;
   background-color: lightgrey;
-  border:solid #000;
+  border: 1px solid #000;
   padding: 10px 16px;
+  margin-bottom: 20px;
   width: 100%;
 }
 
 .column {
   display:flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .item {
   display: flex;
+}
+
+.details-buttons {
+  display: flex;
   justify-content: center;
 }
+
  .item label {
   flex: 1;
  }
@@ -50,16 +56,14 @@ label {
  }
 
 .box1{
-background-color: #C1CEFE;
 margin-bottom: 10px;
-border: 3px solid #ffecdb;
+border: 1px solid #000;
 padding: 10px 16px;
 }
 
 .box2{
-  background-color:#C1CEFE;
   margin-top:10px;
-  border: 3px solid #ffecdb;
+  border: 1px solid #000;
   padding: 10px 16px;
 }
 
@@ -68,9 +72,8 @@ padding: 10px 16px;
   justify-content: flex-end;
 }
 
-h2, h3, label{
-  color:#3a539b;
-  text-align: center;
+h2, h3 {
+  text-align: left;
 }
 
 h2{
@@ -90,7 +93,6 @@ button {
   border: solid whitesmoke;
   background-color: #3B0D11;
   color:whitesmoke;
-  font-family: 'Markazi Text', serif;
   font-size: 12px;
   margin: 10px;
 }
